[gd_scene load_steps=13 format=3 uid="uid://csaw36suwp545"]

[ext_resource type="Texture2D" uid="uid://c35r7gy18ch5b" path="res://resources/titlelong.png" id="1_q3tf1"]
[ext_resource type="Script" path="res://script/UI.gd" id="1_w2vtm"]
[ext_resource type="Texture2D" uid="uid://c2ipe4smo26ov" path="res://resources/button2.png" id="3_y1hj4"]
[ext_resource type="Script" path="res://scene/level0(slide).gd" id="4_p023w"]
[ext_resource type="Texture2D" uid="uid://crit1hicl5a4" path="res://resources/box.png" id="4_wi1wj"]
[ext_resource type="Texture2D" uid="uid://c7v1ixr1gw2kw" path="res://resources/button1.png" id="5_lu2ed"]
[ext_resource type="AudioStream" uid="uid://bpld83mbmjgym" path="res://assets/sounds/button.mp3" id="5_scmfa"]
[ext_resource type="Script" path="res://scene/level1(pentomino).gd" id="6_4g2vo"]
[ext_resource type="AudioStream" uid="uid://c17xqnr4grtqg" path="res://assets/sounds/win music.wav" id="9_difsk"]

[sub_resource type="ImageTexture" id="ImageTexture_j2fvs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6r38o"]
texture = SubResource("ImageTexture_j2fvs")

[sub_resource type="Theme" id="Theme_uqsx6"]
RichTextLabel/styles/normal = SubResource("StyleBoxTexture_6r38o")

[node name="UI" type="Control" groups=["ui"]]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_w2vtm")

[node name="levelmenu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="levelmenu"]
texture_filter = 1
layout_mode = 0
offset_left = 420.0
offset_right = 1500.0
offset_bottom = 1080.0
texture = ExtResource("4_wi1wj")

[node name="level0(slide)" type="TextureButton" parent="levelmenu"]
layout_mode = 0
offset_left = 1189.0
offset_top = 717.0
offset_right = 1239.0
offset_bottom = 767.0
scale = Vector2(2.1, 2.1)
texture_normal = ExtResource("3_y1hj4")
script = ExtResource("4_p023w")

[node name="level1(pentomino)" type="TextureButton" parent="levelmenu"]
layout_mode = 0
offset_left = 635.0
offset_top = 273.0
offset_right = 685.0
offset_bottom = 323.0
scale = Vector2(2.1, 2.1)
texture_normal = ExtResource("5_lu2ed")
script = ExtResource("6_4g2vo")

[node name="mainmenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0

[node name="CenterContainer" type="CenterContainer" parent="mainmenu"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="mainmenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="TextureRect" type="TextureRect" parent="mainmenu/CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_q3tf1")
expand_mode = 5

[node name="play" type="Button" parent="mainmenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Play"

[node name="help" type="Button" parent="mainmenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Help"

[node name="credits" type="Button" parent="mainmenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Credits"

[node name="credits" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="CenterContainer" type="CenterContainer" parent="credits"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="credits/CenterContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="credits/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme = SubResource("Theme_uqsx6")
text = "Project lead: Mateo"

[node name="mainmenu" type="Button" parent="credits/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Main Menu"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_scmfa")

[node name="WinSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_difsk")

[connection signal="pressed" from="levelmenu/level0(slide)" to="levelmenu/level0(slide)" method="_on_pressed"]
[connection signal="pressed" from="levelmenu/level1(pentomino)" to="levelmenu/level1(pentomino)" method="_on_pressed"]
[connection signal="pressed" from="mainmenu/CenterContainer/VBoxContainer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="mainmenu/CenterContainer/VBoxContainer/credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="credits/CenterContainer/VBoxContainer/mainmenu" to="." method="_on_mainmenu_pressed"]
